# ceda-services-portal

./: .gitignore  README.md  manage.py  pyproject.toml  requirements.txt  setup.py
account/: __init__.py  actions.py  admin.py  backends.py  context_processors.py  exceptions.py  forms.py  middleware.py  models.py  rabbit.py  urls.py  utils.py  validators.py  views.py
account/management/commands/: pending_requests.py
account/migrations/: 0001_initial.py  0002_cedauser_jasminaccountid.py  0003_cedauser_ftp_password.py  0004_cedauser_has_access_tokem.py  0005_accesstokens.py  0006_accesstokens_expiry.py  0007_auto_20230823_1518.py
account/static/account/css/: tweaks.css
account/static/account/js/: beacon.js  bootstrap-features.js  google-analytics.js
account/templatetags/: ceda_user_tags.py
account/views/: __init__.py  access_token.py  account_jasmin_link.py  common.py  ftp_password.py  role_apply.py
account/views/api/: __init__.py  access_token.py  create_service.py
ceda_account/: __init__.py  actions.py  admin.py  backends.py  forms.py  models.py  urls.py  views.py
ceda_account/migrations/: 0001_initial.py
ceda_account/static/css/: tweaks.css
ceda_account/templates/ceda_account/: layout.html  profile.html
ceda_account_site/: __init__.py  settings_common.py  urls.py  wsgi.py
scripts/: services_creator.py
services_portal_site/: __init__.py  admin_config.py  admin_site.py  asgi.py  middleware.py  settings.py.template  settings_common.py  urls.py  views.py  wsgi.py
services_portal_site/static/admin/css/: select_filters.css  selector_title.css
services_portal_site/static/admin/js/: select_filters.js
services_portal_site/templates/: 400.html  403.html  404.html  500.html  layout.html  layout_generic.html  layout_sidebar.html
services_portal_site/templates/account/: access_token.html  ftp_password.html  jasmin_account.html
services_portal_site/templates/account/includes/: sidebar.html
services_portal_site/templates/admin/: base_site.html  permission_denied.html
services_portal_site/templates/jasmin_notifications/mail/: layout.txt
services_portal_site/templates/jasmin_notifications/mail/grant_created/: content.txt
services_portal_site/templates/jasmin_notifications/mail/pending_summary/: content.txt
services_portal_site/templates/jasmin_services/: request_decide.html  role_apply.html  service_base.html  service_details.html  service_list.html  service_message.html  service_requests.html  service_users.html
services_portal_site/templates/jasmin_services/includes/: display_metadata.html
services_portal_site/templates/jasmin_services/my_services/: service_list.html
templates/: layout.html  layout_sidebar.html
templates/account/: base.html  ftp_password.html  jasmin_account.html  login.html
templates/jasmin_notifications/: notification_dropdown.html
templates/jasmin_notifications/mail/: layout.txt
templates/jasmin_notifications/mail/grant_created/: content.txt
templates/jasmin_services/: email_message.txt  request_decide.html  role_apply.html  service_details.html  service_list.html  service_message.html  service_requests.html  service_users.html
templates/jasmin_services/includes/: role_badge.html  service_list_item.html  service_tabs.html
templates/jasmin_services/my_services/: service_list.html
