[tool.poetry]
name = "ceda-services-portal"
version = "0.2.0"
authors = ["William Tucker <william.tucker@stfc.ac.uk>"]
maintainers = ["William Tucker <william.tucker@stfc.ac.uk>"]
license = "BSD-3-Clause"
description = "Django application for registering and managing CEDA users."

packages = [
    { include = "services_portal_site"},
    { include = "account"},
]

[tool.poetry.dependencies]
python = "^3.11"
# Dependencies of dependencies. Need to specify here so pip knows where to get them from.
jasmin-ldap = {git="https://github.com/cedadev/jasmin-ldap.git", tag="v1.0.2"}

# Main CEDA Dependencies.
jasmin-services = {git="https://github.com/cedadev/jasmin-services.git", rev="ad05cd8ff059b839d6b32546b03ae116fd85bd28", extras=["keycloak"]}
crypto-cookie = {git="https://github.com/cedadev/crypto-cookie.git", rev="b92dd9e6cc910d48d9380222c9273c8929666980"}
django-oidc-extras = {git="https://github.com/cedadev/django-oidc-extras.git", rev="3210fea039f7f5c17dbbe9df104eecdf8cbfb4e6"}
fwtheme-django = { git="https://github.com/cedadev/fwtheme-django.git", rev="786021bdb6f34cf693d44e96803a5df7d88b76fd"}
fwtheme-django-ceda-serv = {git="https://github.com/cedadev/fwtheme-django-ceda-serv.git", rev="1174dae805fbc3e5ec48f1f81c28ed39a5872fdc"}
jasmin-django-utils = {git="https://github.com/cedadev/jasmin-django-utils.git", rev="v1.0.9"}
jasmin-ldap-django = {git="https://github.com/cedadev/jasmin-ldap-django.git", rev="2b708c9136f31e8819ffff00fcb95567c27ed659"}
jasmin-notifications = {git="https://github.com/cedadev/jasmin-notifications.git", rev="2bbffd65915ccd75c3f26af20cf0a1f6ba2faac1"}

# Main external dependencies.
Django="~5.1"
django-cookie-law="2.2.0"
django-countries="^7.6.0"
django-crispy-forms ="^1.14.0"
django-markdown-deux="^1.0.5"
django-widget-tweaks="^1.4.12"
djangorestframework="^3.13.1"
mozilla-django-oidc= "^2.0.0"
oauthlib="^3.2.0"
pika= "^1.2.0"
psycopg2-binary= "^2.9.3"
python-dateutil="^2.8.2"
requests-oauthlib = "^1.3.1"
httpx="^0.27.0"
django-mailer="^2.3.2"

# Deployment dependencies
whitenoise ="^6.6.0"
django-flexi-settings ={git="https://github.com/cedadev/django-flexi-settings.git", rev="eb24d17a0e0897edeb53c820df50aa478368dec8"}

# Extras
# Setuptools is needed because django-polymorphic uses the deprecated pkg_resources.
setuptools = "*"

[tool.black]
target-version = ['py310', 'py311']

[tool.isort]
profile = "black"

[tool.pylint.main]
load-plugins = 'pylint_django'

[build-system]
requires = ["poetry-core>=1.0.0", "setuptools>=59.6.0"]
build-backend = "poetry.core.masonry.api"
